Tests/RunCMake/CMakePresets/ExtraVariableField-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/ExtraVariableField:
Error: @11,22: Invalid extra field "invalid" in variable "EXTRA" for preset "ExtraVariableField"
          "invalid": true
                     \^$
